style: fix hamburger menu hover background in dark mode

--- a/src/styles/components/_todo.scss
+++ b/src/styles/components/_todo.scss
@@ -169,7 +169,7 @@ dialog.confirm-modal {
     @include transition();
     
     &:hover {
-      background: $blGray;
+      background: var(--color-main-5);
     }
   }
 
